# zombie-plague

./: .buildignore  .env.example  .gitignore  CMakeLists.txt  README.md
infrastructure/: CMakeLists.txt
infrastructure/meta_plugin/include/: MetaPlugin.h
infrastructure/meta_plugin/src/: MetaPlugin.cc
infrastructure/reapi/include/: IReGameApi.h  reapi.h
infrastructure/reapi/src/: reapi.cc
plugins/: CMakeLists.txt
plugins/example_plugin/: CMakeLists.txt  meta_api.cpp
plugins/zombie_plague/: CMakeLists.txt  main.cc
plugins/zp_core/: CMakeLists.txt  main.cpp
plugins/zp_core/reapi/: reapi.cpp  reapi.h
plugins/zp_core/server/: server.cpp  server.h
plugins/zp_core/weapons/: weapons.cpp  weapons.h
templates/plugin/: CMakeLists.txt  exports.def  main.cc  main.cpp
templates/plugin_game/: CMakeLists.txt  exports.def  main.cpp
tools/: build.ps1  config.ps1  dev.ps1  install.ps1  new-plugin.ps1  rebuild.ps1  run.ps1
